--- a/config.yaml
+++ b/config.yaml
@@ -1684,6 +1684,7 @@ Rule:
 - DOMAIN-SUFFIX,me.com,Apple
 - DOMAIN-SUFFIX,mzstatic.com,Apple
 - DOMAIN,www-cdn.icloud.com.akadns.net,Apple
+- DOMAIN,clash.razord.top,DIRECT
 - IP-CIDR,17.0.0.0/8,Apple,no-resolve
 
 # Local Area Network
